Handle normal messages that are longer then 512 chars

BUG:98730

svn path=/trunk/kdeextragear-2/konversation/; revision=399208